wip 'release submit form'

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -4,6 +4,11 @@
   --off-color: rgb(231, 231, 231);
   --deemphasized-color: rgb(190, 190, 190);
   --highlight-color: rgb(78, 224, 78);
+
+  --nav-scale: 2rem;
+  --nav-height: calc(var(--nav-scale) * 1.3);
+  --main-padding: 2.5rem;
+  --main-content-padding-top: calc(var(--nav-height) + var(--main-padding))
 }
 
 * {
@@ -13,6 +18,7 @@
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: var(--main-color);
   text-shadow: 0 0 0.5em rgba(0, 0, 0, 0.5);
+  text-decoration: none;
 }
 
 html {
@@ -29,23 +35,23 @@ html, body {
 
 /* nav */
 
-nav, nav * {
+nav {
   background-color: black;
 }
 
 nav {
   position: fixed;
   width: 100%;
+  height: var(--nav-height);
+  
+  font-size: var(--nav-scale);
+  font-weight: 800;
 
   display: flex;
   justify-content: center;
-
-  font-size: 2rem;
-  font-weight: 800;
 }
 
 nav * {
-  text-decoration: none;
   list-style: none;
 }
 
@@ -53,16 +59,16 @@ nav *:hover {
   color: var(--highlight-color);
 }
 
-/* main content */
+/* release page */
 
-article {
+.release-content {
   font-weight: 550;
-  padding: 5rem 10vw 2rem;
+  padding: var(--main-content-padding-top) 10vw var(--main-padding);
 }
 
 @media screen and (max-width: 820px) {
-  article {
-    padding: 4.5rem 2rem 2rem;
+  .release-content {
+    padding: var(--main-content-padding-top) var(--main-padding) var(--main-padding);
   }
 }
 
@@ -181,4 +187,48 @@ article {
   flex: 0 0;
   text-align: end;
   font-size: 1.1rem;
+}
+
+/* feed page */
+
+.feed {
+  padding: var(--main-content-padding-top) max(6vw, var(--main-padding));
+}
+
+.feed-item {
+  border-radius: 0.5rem;
+  padding: 0.8rem;
+  display: inline-block;
+  width: fit-content;
+}
+
+.feed-item:hover {
+  background: linear-gradient(0turn, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.1));
+  backdrop-filter: blur(5px);
+}
+
+.feed-cover {
+  width: 14rem;
+  height: auto;
+}
+
+.feed-title {
+  font-weight: 520;
+}
+
+.feed-title:hover {
+  text-decoration: underline;
+}
+
+.feed-artists {
+  color: var(--deemphasized-color);
+  font-size: 0.9em;
+}
+
+.upload-form {
+  background-color: rgb(119, 119, 119);
+}
+
+.upload-form input, .upload-form button {
+  color: black;
 }
