--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -74,12 +74,6 @@ nav *:hover {
   padding: var(--main-content-padding-top) 10vw var(--main-padding);
 }
 
-@media screen and (max-width: 820px) {
-  .release-content {
-    padding: var(--main-content-padding-top) var(--main-padding) var(--main-padding);
-  }
-}
-
 /* banner */
 
 .banner {
@@ -157,6 +151,8 @@ nav *:hover {
   border: solid;
   border-image: linear-gradient(0.25turn, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.35), rgba(255, 255, 255, 0.1)) 1;
   border-width: 1.5px 0 0 0;
+
+  font-size: 1rem;
 }
 
 .track:hover {
@@ -178,7 +174,7 @@ nav *:hover {
 }
 
 .track-number-title {
-  font-size: 1.3rem;
+  font-size: 1.3em;
 }
 
 .track.playing .track-number-title,
@@ -187,7 +183,7 @@ nav *:hover {
 }
 
 .track-artists {
-  font-size: 0.9rem;
+  font-size: 0.9em;
   font-weight: 500;
   color: var(--deemphasized-color)
 }
@@ -195,7 +191,7 @@ nav *:hover {
 .track-length {
   flex: 0 0;
   text-align: end;
-  font-size: 1.1rem;
+  font-size: 1.1em;
 }
 
 /* feed page */
@@ -234,178 +230,18 @@ nav *:hover {
   font-size: 0.9em;
 }
 
-/* upload form */
-
-.upload-window {
-  margin: calc(var(--nav-height) + 2rem) 2rem 2rem;
-  padding: calc(var(--form-padding) * 2);
-  position: absolute;
-  height: fit-content;
-  inset: 0;
-  background-color: rgba(204, 204, 204, 0.8);
-  box-shadow: inset 0 0 100px rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(0.5rem);
-  font-size: 1.1rem;
-  font-weight: 600;
+@media (max-width: 820px) {
+  .release-content {
+    padding: var(--main-content-padding-top) var(--main-padding) var(--main-padding);
+  }
 }
 
-.upload-window * {
-  color: black;
-  text-shadow: none;
-}
-
-.upload-window header {
-  border-bottom: 1px solid rgb(255, 255, 255);
-  border-image: linear-gradient(0.25turn, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)) 1;
-  display: flex;
-}
-
-.upload-window header h1 {
-  font-size: 1.5rem;
-  width: 100%;
-  padding-bottom: 1.5rem;
-}
-
-.upload-window-header-buttons {
-  display: flex;
-  align-items: flex-start;
-  height: fit-content;
-}
-
-.upload-window-close {
-  border: 1px solid black;
-  background-color: white;
-  overflow: hidden;
-  font-size: 1.8rem;
-  font-weight: 600;
-  height: 1.8rem;
-  width: 1.8rem;
-}
-
-.upload-window-close:hover {
-  background-color: black;
-}
-
-.upload-window-close:hover * {
-  color: white;
-}
-
-
-.upload-window-close div {
-  transform: translateY(-0.4rem);
-  color: black;
-}
-
-.upload-form button,
-.upload-form label,
-.upload-form input {
-  margin: 0 0.5em 0.5em 0;
-}
-
-.upload-form button,
-.upload-form input,
-.upload-track-impostor {
-  border: 1px solid black;
-  padding: 0 0.4em 0;
-
-  font-weight: 600;
-  background-color: white;
-  color: black;
-}
-
-.upload-form button {
-  background-color: white;
-}
-
-.upload-form button:hover {
-  cursor: pointer;
-  background-color: black;
-  color: white;
-}
-
-.upload-form>fieldset {
-  border: 0;
-  border-bottom: 1px solid rgb(255, 255, 255);
-  border-image: linear-gradient(0.25turn, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0)) 1;
-  padding: var(--form-padding) 0 var(--form-padding);
-}
-
-.form-artists {
-  border: 0;
-  padding-top: var(--form-padding);
-}
-
-.form-cover-art label {
-  display: block;
-}
-
-#cover-art-select {
-  display: inline-block;
-  width: 13rem;
-  height: 13rem;
-  border: 1px solid black;
-  background-color: rgba(0, 0, 0, 0);
-  overflow: hidden;
-}
-
-#cover-art-select:hover {
-  cursor: pointer;
-  filter: invert()
-}
-
-#cover-art-select img {
-  padding: 5rem;
-  width: 100%;
-  height: 100%;
-  object-fit: scale-down;
-}
-
-#cover-art {
-  width: 0;
-  height: 0;
-  visibility: hidden;
-}
-
-.upload-track {
-  display: flex;
-  align-items: start;
-}
-
-.upload-track>* {
-  font-size: 1rem;
-  margin: 0 0.5em 0.5em 0;
-}
-
-.upload-track-file {
-  display: none;
-}
-
-.upload-track-impostor {
-  background-color: var(--slight-highlight-color);
-}
-
-.upload-track-impostor:hover {
-  cursor: pointer;
-  color: white;
-  background-color: black;
-}
-
-.upload-window footer {
-  padding-top: var(--form-padding);
-}
-
-#submit-upload-form {
-  border: 1px solid black;
-  padding: 0 0.5rem 0;
-  margin: 0;
-  font-size: 1.5rem;
-  font-weight: 600;
-  background-color: white;
-  color: black;
-}
-
-#submit-upload-form:hover {
-  cursor: pointer;
-  background-color: black;
-  color: white;
+@media (max-width: 720px) {
+  .track-list {
+    margin-inline: calc(0px - var(--main-padding));
+  }
+  
+  .track {
+    font-size: 0.9rem;
+  }
 }
